--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ before_build:
   - ps: gitversion /l console /output buildserver /updateAssemblyInfo /b (get-item env:APPVEYOR_REPO_BRANCH).Value
 
 build:
-  project: src/Nancy.Patch.sln
+  project: src/Nancy.IPLock.sln
   verbosity: minimal
 
 after_build:
